[build-system]
requires = ["setuptools>=68", "wheel"]
build-backend = "setuptools.build_meta"

[project]
name = "psyllm"
version = "0.0.1"
dependencies = [
  "aiofiles>=23.2.1",
  "fastapi>=0.110",
  "uvicorn>=0.29",
  "pydantic>=2",
  "sqlalchemy>=2",
  "psycopg2-binary>=2.9",
  "langgraph>=0.2",
  "langsmith>=0.1",
  "httpx>=0.27",
  "jinja2>=3.1",
  "langchain-openai>=0.1.0"
]

[tool.setuptools]
package-dir = {"" = "src"}

[tool.setuptools.packages.find]
where = ["src"]